# hello_low_layer

./: .gitmodules  Makefile  hello.c  hello_malloc.cpp  hello_malloc2.cpp
linked_list/: Makefile  linked_list.c
lua/: .gitignore  Makefile  README.md  sample.cpp  test.cpp
lua/samples/: .gitignore  Makefile  README.md  call_c_func.cpp  call_c_func.lua  dofile.cpp  dostring.cpp  game_loop.cpp  helloworld.lua  input.cpp  lua_call.cpp
lua/samples/call_c_func/: call_c_func.cpp  call_c_func.lua
lua/samples/clion/lua_class/: CMakeLists.txt  Point.lua  lua-5.2.3  main.cpp  point.cpp
lua/samples/clion/simple_game_loop/: .gitignore  CMakeLists.txt  Data.h  lua_glue_code.cpp  main.cpp  main.h
lua/samples/clion/simple_game_loop/CMakeScripts/: ALL_BUILD_cmakeRulesBuildPhase.makeDebug  ReRunCMake.make  ZERO_CHECK_cmakeRulesBuildPhase.makeRelease
lua/samples/dofile/: dofile.cpp
lua/samples/dostring/: dostring.cpp
lua/samples/game_loop/: draw.lua  game_loop.cpp  update.lua
lua/samples/libs/SDL2-2.0.3/: Makefile  Makefile.rules  config.status  libtool  sdl2-config  sdl2.pc
lua/samples/lua_cpp_bridge/: input.cpp  lua-5.2.3  sum.lua
lua/samples/lua_print/: print.cpp
lua/samples/sample_class/: CMakeLists.txt  Functions.lua  Point.lua  main.cpp
lua/samples/sample_list/: list.lua
lua/samples/simple_game_loop/: CMakeLists.txt  Color.cpp  Color.h  Data.cpp  Data.h  Palette.h  lua_glue_code.cpp  main.cpp  main.h
lua/samples/simple_game_loop/lua/: draw.lua  update.lua
malloc/: Makefile  hello.c  hello_malloc.cpp  test.cpp
(+15 files in other folders)
